--- a/WrapSQLInQuotesForCS/WrapSQLInQuotesForCS/WrapSQLInQuotesForCS.csproj
+++ b/WrapSQLInQuotesForCS/WrapSQLInQuotesForCS/WrapSQLInQuotesForCS.csproj
@@ -51,7 +51,7 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="WindowsInput, Version=1.0.4.0, Culture=neutral, PublicKeyToken=9b287f7dc5073cad, processorArchitecture=MSIL">
+    <Reference Include="WindowsInput">
       <HintPath>..\packages\InputSimulator.1.0.4.0\lib\net20\WindowsInput.dll</HintPath>
     </Reference>
   </ItemGroup>
